--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <button type="submit" onclick="displayData()">submit</button>
     </div>
 </div>
+<p>ALLAH HU AKBAR<p>
 </body>
 
 </html>
