organising into challan func folder and few other changer

--- a/challanFunc/ch_choice.html
+++ b/challanFunc/ch_choice.html
@@ -13,5 +13,7 @@
         <a href="#">modify</a><br>
         <a href="ch_list.html">list</a><br>
     </div>
+    <button id="testApi"> test api</button>
 </body>
+<script src="main.js"></script>
 </html>
