--- a/challanFunc/index.html
+++ b/challanFunc/index.html
@@ -8,17 +8,21 @@
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<script src="index.js"></script>
+<script src="main.js"></script>
 <body>
     
     <div class="tab tab-2">
             challan number: <input type="number" id="ch_num"><br>
             challan date: <input type="date" id="ch_date"><br>
+            challan type: <input type="text" id="ch_type"><br>
             party name: <input type="text" id="ch_party"><br>
-            item: <input type="text" id="ch_item">
+            item: <input type="text" id="ch_item"><br>
+            shade number:<input type="text" id="shade_num"><br>
             item_amount: <input type="number" id="item_amount"><br>
+            job charges:<input type="number" id="price"><br>
+            total amt: <p>500</p>
 
-            <button type="submit" onclick="displayData()">submit</button>
+            <button type="submit" onclick="submitData()">submit</button>
     </div>
 </div>
 </body>
