main.js created

--- a/challanFunc/addNewParty.html
+++ b/challanFunc/addNewParty.html
@@ -7,18 +7,16 @@
     <title>AddParty</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<script src="C:\Users\NAVMEET\Desktop\ProgrammingPractice\dyeingSystemJobWork\main.js"></script>
 <body>
     <div class="tab tab-2"></div>
-    
         <label for="text">Party Name:</label>
         <input type="text" name="party_name" id="ch_party" placeholder="Enter party name here ...."><br>
         <label for="text">Party address:</label>
         <input type="text" id ="party_address" placeholder="Enter party address here ...."><br>
         <label for="text">GSTIN:</label>
         <input type="text" id ="party_gst" placeholder="GSTIN"><br>
-        <button type="submit">submit details</button>
-
-
+        <button type="submit" onclick="addParty()">submit details</button>
     </div>
 </body>
 </html>
