fetch api for insertion of data

--- a/challanFunc/index.html
+++ b/challanFunc/index.html
@@ -8,7 +8,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<script src="main.js"></script>
+<script src="C:\Users\NAVMEET\Desktop\ProgrammingPractice\dyeingSystemJobWork\main.js"></script>
 <body>
     
     <div class="tab tab-2">
@@ -20,7 +20,7 @@
             shade number:<input type="text" id="shade_num"><br>
             item_amount: <input type="number" id="item_amount"><br>
             job charges:<input type="number" id="price"><br>
-            total amt: <p>500</p>
+            total amt: <p id="total_amt">500</p>
 
             <button type="submit" onclick="submitData()">submit</button>
     </div>
